--- a/assets/styles.css
+++ b/assets/styles.css
@@ -166,13 +166,17 @@ div.photoofme img {
 div.photoofme .desc{
   text-align: center;}
 
-
-
-
-
-  iframe {
-    float: right;
+  
+  
+  div.youtubevid{
+    display: block;}
+  div.youtubevid iframe {
+    padding-left: 180px;
+    padding-top: 15px;
     width: 600px;
-    height: auto;
-    border: none;
-  }
+    height: 400px;
+    border: none;}
+  div.youtubevid .desc{
+    padding-top: 10px;
+    padding-left: 180px; 
+    text-align: center;}
