--- a/assets/styles.css
+++ b/assets/styles.css
@@ -91,7 +91,7 @@ main {
 .row {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
 }
 .column {
   display: flex;
