--- a/assets/styles.css
+++ b/assets/styles.css
@@ -98,7 +98,7 @@ main {
   flex-wrap: wrap;}
 
 @media screen and (max-width: 700px) {
-  .row  {   
+  .row, .navbar {   
     flex-direction: column;}}
 
 
