--- a/assets/styles.css
+++ b/assets/styles.css
@@ -23,6 +23,7 @@
   ||======================||*/
 body {
     font-family: Arial, sans-serif;
+    color: white;
     margin: 0;
     padding: 0;
     min-height: 100vh;
@@ -78,13 +79,13 @@ main {
 
 .article {
   flex: 70%;
-  background-color: seashell;
+  background-color: black;
   padding: 20px;
   box-sizing: border-box;}
   
 .sidebar {
   flex: 30%;
-  background-color: rgb(255, 237, 226);
+  background-color: darkslategrey;
   box-sizing: border-box;
   padding: 20px;}
 
