--- a/assets/styles.css
+++ b/assets/styles.css
@@ -36,7 +36,7 @@ body {
   ||======================||*/
 header {
   color: black;
-  background-color: lightseagreen;
+  background-color: rgb(179, 233, 230);
 padding: 10px;}
 
 /*||======================||
@@ -103,7 +103,6 @@ main {
 @media screen and (max-width: 700px) {
   .row, .navbar {   
     flex-direction: column;}}
-
 
 /*||======================||
   ||  RMIT Logo Styling   ||
