--- a/assets/styles.css
+++ b/assets/styles.css
@@ -36,7 +36,7 @@ body {
   ||======================||*/
 header {
   color: black;
-  background-color: rgb(179, 233, 230);
+  background-color: lightseagreen;
 padding: 10px;}
 
 /*||======================||
@@ -87,7 +87,7 @@ main {
 .sidebar {
   flex: 30%;
   color: white;
-  background-color: black;
+  background-color: rgb(192, 235, 233);
   box-sizing: border-box;
   padding: 20px;}
 
